--- a/indexs.html
+++ b/indexs.html
@@ -130,15 +130,15 @@
         <div class="footer-center">
             <div>
                 <i class="footer-satu"></i>
-                <p> Learning Path </p>  spasi  <p>Contact Us</p>
+                <p> Learning Path </p> 
             </div>
             <div>
                 <i class="foter-dua"></i>
-                <p><span>Front End</span></p>  spasi spasi <p><span>Baracode@gmail.com</span></p>
+                <p><span>Front End</span></p>  
             </div>
             <div>
                 <i class="footer-tiga"></i>
-                <p><span>UI/UX</span></p> spasi spasi sp <p><span>(+62) 081-2759-0284</span></p>
+                <p><span>UI/UX</span></p> 
             </div>
             <div></div>
         </div>
